# fract-ol

./: CMakeLists.txt  Makefile  README.md  a.out  fractal_v.c  fractol.h  main.c  t_rgb.c  version1.c
libft/: ft_atoi.c  libft.h
sources/: Get_real.c  another.c  burning_ship.c  color.c  hooks.c  julia.c  keyboard_hooks.c  main.c  mandelbrot.c  mouse_hooks.c  my_frctl_or_triple_m.c  serpinskiy.c
Папка/: Get_real.c  Makefile  another.c  burning_ship.c  color.c  fractol  fractol.h  git_ssh  git_ssh.pub  hooks.c  julia.c  julia.cu  keyboard_hooks.c  main.c  mandelbrot.c  mouse_hooks.c  my_frctl_or_triple_m.c  serpinskiy.c  t_rgb.c
Папка/includes/: libft.h
